tests/language_tests/pass/0080_nested_function_calls.ee
fn leaf() {
    print(1);
}

fn middle() {
    leaf();
    print(2);
}

fn main() {
    middle();
    middle();
}
