tests/language_tests/fail/0033_else_keyword_as_variable_name.ee
fn main() {
    let else = 1;
}
